src/parser/test/esprima/invalid-syntax/strict_assignment_static.js
function hello() { "use strict"; static = 1; }
